--- a/HlsWorkSpace/Hls-hbm/SneakySnake_bit/hls/csim/code_analyzer/.internal/config.ini
+++ b/HlsWorkSpace/Hls-hbm/SneakySnake_bit/hls/csim/code_analyzer/.internal/config.ini
@@ -6,24 +6,17 @@ param.hls.enable_hidden_option_error=false
 clock=10ns
 clock_uncertainty=27%
 flow_target=vitis
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.cpp
 syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.cpp
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.h
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.h
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include/action_memcopy.h
-syn.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.cpp,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.cpp,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.h,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.h,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include/action_memcopy.h,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_csimflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.cpp,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_csimflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.cpp,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_csimflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.h,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_csimflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.h,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
-syn.file_csimflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include/action_memcopy.h,/home/deniz/oc-accel/actions/include/hls_snap_1024.H
+syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/hw_action_hbm.cpp
+syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.cpp
+syn.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.cpp,-I/home/deniz/oc-accel/actions/hls_hbm_memcopy_1024/hw -I/home/deniz/oc-accel/actions/include -I/home/deniz/oc-accel/software/include -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include
+syn.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/hw_action_hbm.cpp,-I/home/deniz/oc-accel/actions/hls_hbm_memcopy_1024/hw -I/home/deniz/oc-accel/actions/include -I/home/deniz/oc-accel/software/include -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include
+syn.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.cpp,-I/home/deniz/oc-accel/actions/hls_hbm_memcopy_1024/hw -I/home/deniz/oc-accel/actions/include -I/home/deniz/oc-accel/software/include -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include
 syn.top=SneakySnake_bit
-tb.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/hw_action_hbm.cpp
-tb.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/hw_action_hbm.H
+tb.file=/home/deniz/Projects/SneakySnake/Datasets
+tb.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/wrapper.cpp
+tb.file_cflags=/home/deniz/Projects/SneakySnake/Datasets,-I/home/deniz/oc-accel/actions/hls_hbm_memcopy_1024/hw -I/home/deniz/oc-accel/actions/include -I/home/deniz/oc-accel/software/include -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include
+tb.file_cflags=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/wrapper.cpp,-I/home/deniz/oc-accel/actions/hls_hbm_memcopy_1024/hw -I/home/deniz/oc-accel/actions/include -I/home/deniz/oc-accel/software/include -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include
 cosim.compiler=clang
 cosim.disable_pipeline_flush=true
 cosim.enable_kernel_monitor=0
