--- a/HlsWorkSpace/Hls-hbm/hls_config.cfg
+++ b/HlsWorkSpace/Hls-hbm/hls_config.cfg
@@ -5,15 +5,10 @@ flow_target=vitis
 package.output.format=xo
 package.output.syn=false
 syn.top=SneakySnake_bit
-syn.cflags=-I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include -I/home/deniz/oc-accel/actions/include -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include/action_memcopy.h
-tb.cflags=-I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include -I/home/deniz/oc-accel/actions/include -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include/action_memcopy.h
-syn.csimflags=-I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include -I/home/deniz/oc-accel/actions/include -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include/action_memcopy.h
 syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.cpp
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.cpp
 syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/hw_action_hbm.cpp
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.h
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/hw_action_hbm.H
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/pipeline.h
-syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include/action_memcopy.h
-tb.file=/home/deniz/Projects/SneakySnake/Datasets
+syn.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/hw/fetch_mem.cpp
 tb.file=/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/wrapper.cpp
+syn.cflags=-I/home/deniz/oc-accel/actions/hls_hbm_memcopy_1024/hw  -I/home/deniz/oc-accel/actions/include  -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include 
+tb.cflags=-I/home/deniz/oc-accel/actions/hls_hbm_memcopy_1024/hw -I/home/deniz/oc-accel/actions/include   -I/home/deniz/Projects/SneakySnake/SneakySnake-HLS-HBM/include 
+csim.code_analyzer=0
